Select similar by direction ignoring edges with opposite direction #115907

Closed
opened 2023-12-07 17:36:45 +01:00 by Vyacheslav Kobozev · 3 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Broken: 3.6

Short description of error
When i try to select all codirected edges, blender only selects few, despite even high threshold
Expected: select any edge, that is similar. (calculate module of dot-product for vector comparation)
image
I have this reesult

Exact steps for others to reproduce the error
Open the file, press Shift + G and select «Direction», Try to increase threshold

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Broken: 3.6 **Short description of error** When i try to select all codirected edges, blender only selects few, despite even high threshold Expected: select any edge, that is similar. (calculate module of dot-product for vector comparation) ![image](/attachments/5eefed8a-de70-46b4-b629-b2b4ad822c18) I have this reesult <video src="/attachments/0e66d390-b9a8-45b7-a6f9-cb812f0157a3" title="2023-12-07_19-24-26.mp4" controls></video> **Exact steps for others to reproduce the error** Open the file, press Shift + G and select «Direction», Try to increase threshold
Vyacheslav Kobozev added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-12-07 17:36:46 +01:00
Iliya Katushenock added the
Interest
Modeling
label 2023-12-07 18:00:05 +01:00

Thank you for the report.

In fact the Select Similar should search for edges pointing to the opposite direction too.
So confirming the issue.

Thank you for the report. In fact the Select Similar should search for edges pointing to the opposite direction too. So confirming the issue.
Germano Cavalcante added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
Interest
Modeling
labels 2023-12-07 18:15:09 +01:00
Iliya Katushenock changed title from Select similar by direction do not search all horisontal lines to Regression: Select similar by direction do not search all horisontal lines 2023-12-07 18:17:15 +01:00

Not able to confirm the fact of regression.

Not able to confirm the fact of regression.
Germano Cavalcante changed title from Regression: Select similar by direction do not search all horisontal lines to Select similar by direction ignoring edges with opposite direction 2023-12-07 18:31:04 +01:00
Member

Code already tries to do this, see the following in edge_pos_direction_worldspace_get

/* Make sure we have a consistent direction that can be checked regardless of
   * the verts order of the edges. This spares us from storing dir and -dir in the tree_3d. */

Will check on this

Code already tries to do this, see the following in `edge_pos_direction_worldspace_get` ``` /* Make sure we have a consistent direction that can be checked regardless of * the verts order of the edges. This spares us from storing dir and -dir in the tree_3d. */ ``` Will check on this
Philipp Oeser self-assigned this 2023-12-08 12:58:47 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-13 10:32:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115907
No description provided.