Fix #115907: Select similar edge direction skips opposite direction

As I dont quite get the logic of "enforcing a positive quadrant" from
b38be905154b (which broke the previous behavior of 2.79 which was
capable of handling reversed edges as well -- there might be ways to
make that work though), now use the alternative approach of storing the
flipped direction in the kdtree as well.

This has a slight performance hit (only noticable at ~500k edges), but I
believe correctness beats performance here.

Pull Request: https://projects.blender.org/blender/blender/pulls/115951